[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/lemon.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Background.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/bgm.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sfx-fire.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sfx-victory.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 6 )

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 128, 1280, 0, 0, 0, 0, 592, 1280 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Bullet = ExtResource( 4 )
Enemy = ExtResource( 5 )

[node name="GUI" parent="." instance=ExtResource( 3 )]
margin_bottom = 72.0

[node name="EndGUI" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -52.5
margin_right = 150.0
margin_bottom = 52.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndGameLabel" type="Label" parent="EndGUI"]
margin_right = 300.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 1 )
text = "D&D&D"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="EndGUI"]
margin_top = 67.0
margin_right = 300.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 2 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 7 )]

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 360, 320 )

[node name="EnemySpawnPath" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemySpawnPath"]
position = Vector2( 128, 1280 )

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 0.125

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="BulletSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -20.0

[node name="VictorySFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
[connection signal="pressed" from="EndGUI/Button" to="." method="new_game"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
